--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "ag-grid-community": "^30.1.0",
     "ag-grid-react": "^30.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vitest": "^0.34.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
@@ -30,6 +31,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^6.0.0",
-    "vite": "^4.3.9"
+    "vite": "^4.4.9"
   }
 }
